[package]
name = "bound"
description = """
Wrap lock guards and other structs along with the locks or other data they are derived
by shared reference from, in a struct you can pass around and store anywhere
"""
categories = [
    "asynchronous", "concurrency", "data-structures", "memory-management","rust-patterns"
]
repository = "https://github.com/lbfalvy/bound/"
license = "MIT"
authors = ["Lawrence Bethlenfalvy <lbfalvy@protonmail.com>"]
version = "0.5.0"
edition = "2021"

[dev-dependencies]
async-lock = "2.6.0"
